# pathplanning

./: .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_CONVENTIONS.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  SUPPORTED_ALGORITHMS.md  agent.md  decisions.md  handoff.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  state.md  tasks.md
.github/workflows/: publish.yml  pylint.yml
CurvesGenerator/: __init__.py
Sampling_based_Planning/: __init__.py
Sampling_based_Planning/rrt_2D/: batch_informed_trees.py  dubins_rrt_star.py  dynamic_rrt.py  env.py  plotting.py  rrt.py  rrt_star.py  utils.py
Sampling_based_Planning/rrt_3D/: plot_util3D.py
Search_based_Planning/: __init__.py
Search_based_Planning/Search_3D/: Anytime_Dstar3D.py  LP_Astar3D.py  LRT_Astar3D.py  bidirectional_Astar3D.py  plot_util3D.py  queue.py
Search_based_Planning/plan2d/: __init__.py  anytime_dstar.py  anytime_repairing_astar.py  astar.py  best_first_search.py  bidirectional_astar.py  breadth_first_search.py  depth_first_search.py  dijkstra.py  dstar.py  dstar_lite.py  learning_realtime_astar.py  lifelong_planning_astar.py  plan2d_facade.py  realtime_adaptive_astar.py  run.py
Search_based_Planning/plan2d/utils/: __init__.py  env.py  plotting.py
docs/: environment_architecture.md  refactor_baseline.md  refactor_baseline_run.md  refactor_hotspots.md  refactor_naming_baseline.md  refactor_phase_log.md  rrt3d_refactor.md  typing_policy.md
examples/bench/: nn_index_bench.py
examples/worlds/: custom_grid_world.py  demo_3d_world.py
pathplanning/: __init__.py  api.py  registry.py  search2d.py
pathplanning/CurvesGenerator/: __init__.py  bezier_path.py
pathplanning/Sampling_based_Planning/: __init__.py
pathplanning/Sampling_based_Planning/rrt_2D/: dubins_rrt_star.py  extended_rrt.py  fast_marching_trees.py  informed_rrt_star.py  plotting.py  rrt.py  rrt_connect.py  rrt_star_smart.py  utils.py
pathplanning/Sampling_based_Planning/rrt_3D/: ABIT_star3D.py  BIT_star3D.py  extend_rrt3D.py  informed_rrt_star3D.py  rrt3D.py  rrt_connect3D.py  rrt_star3D.py  utils3D.py
pathplanning/Search_based_Planning/: __init__.py
pathplanning/Search_based_Planning/Search_3D/: Astar3D.py  DstarLite3D.py  LP_Astar3D.py  LRT_Astar3D.py  RTA_Astar3D.py  bidirectional_Astar3D.py
pathplanning/Search_based_Planning/plan2d/: anytime_dstar.py  bidirectional_astar.py  dstar.py  dstar_lite.py  realtime_adaptive_astar.py
pathplanning/bench/: __init__.py
pathplanning/collision/: __init__.py
pathplanning/core/: __init__.py  contracts.py  nn_index.py  params.py  results.py  tree.py  types.py
pathplanning/curves/: bezier_path.py  bspline_curve.py  dubins_path.py  quintic_polynomial.py  reeds_shepp.py
pathplanning/data_structures/: __init__.py  tree_array.py
pathplanning/env/: __init__.py  continuous_3d.py
pathplanning/geometry/: __init__.py  bezier_path.py  bspline_curve.py  cubic_spline.py  dubins_path.py  quintic_polynomial.py  reeds_shepp.py
pathplanning/nn/: __init__.py
pathplanning/planners/: __init__.py
pathplanning/planners/sampling/: __init__.py  abit_star.py  bit_star.py  dynamic_rrt.py  entrypoints.py  fmt_star.py  informed_rrt_star.py  rrt.py  rrt_connect.py  rrt_grid2d.py  rrt_star.py
pathplanning/planners/search/: __init__.py  _legacy2d_common.py  anytime_astar.py  anytime_dstar.py  anytime_dstar_3d.py  anytime_repairing_astar.py  astar.py  astar_3d.py  best_first_search.py  bidirectional_astar.py  bidirectional_astar_3d.py  breadth_first_search.py  depth_first_search.py  dijkstra.py  dstar.py  dstar_3d.py  dstar_lite.py  dstar_lite_3d.py  entrypoints.py  greedy_best_first.py  learning_realtime_astar.py  lifelong_planning_astar.py  lp_astar_3d.py  lrt_astar_3d.py  plan2d_facade.py  plot_util_3d.py  realtime_adaptive_astar.py  rta_astar_3d.py  run.py  utils_3d.py  weighted_astar.py
pathplanning/sampling_based_planning/: __init__.py
pathplanning/sampling_based_planning/rrt_2D/: fast_marching_trees.py  rrt_star.py  utils.py
pathplanning/sampling_based_planning/rrt_2d/: __init__.py  batch_informed_trees.py  dubins_rrt_star.py  dynamic_rrt.py  extended_rrt.py  fast_marching_trees.py  informed_rrt_star.py  plotting.py  rrt.py  rrt_connect.py  rrt_star.py  rrt_star_smart.py
pathplanning/sampling_based_planning/rrt_3D/: ABIT_star3D.py  FMT_star3D.py  __init__.py  dynamic_rrt3D.py  informed_rrt_star3D.py  rrt_connect3D.py  utils3D.py
pathplanning/sampling_based_planning/rrt_3d/: BIT_star3D.py  abit_star_3d.py  bit_star_3d.py  dynamic_rrt_3d.py  env3D.py  env_3d.py  extend_rrt3D.py  extend_rrt_3d.py  fmt_star_3d.py  informed_rrt_star3D.py  informed_rrt_star_3d.py  plot_util_3d.py  queue.py  rrt.py  rrt3D.py  rrt_3d.py  rrt_connect3D.py  rrt_connect_3d.py  (+6 more)
pathplanning/search_based_planning/: __init__.py
pathplanning/spaces/: __init__.py  continuous_3d.py  continuous_nd.py  environment3d.py  grid2d.py  grid3d.py
pathplanning/utils/: __init__.py  priority_queue.py  sampling2d.py  sampling3d.py
pathplanning/viz/: __init__.py  _lazy.py  geometry_draw.py  rrt_3d.py  sampling2d_plotting.py  search2d_plotting.py  search3d_plotting.py
pathplanningv2/: __init__.py  api.py  search2d.py
scripts/: benchmark_planners.py
tests/: conftest.py  test_architecture_guards.py  test_architecture_invariants.py  test_continuous_nd_helpers.py  test_continuous_space_3d.py  test_core_contracts_and_params.py  test_env3d_contract.py  test_env3d_rotation_units.py  test_import_safety.py  test_imports_smoke.py  test_naming_policy.py  test_package_api.py  test_packaging_py_typed.py  test_registry_integrity.py  test_rng_enforcement.py  test_rrt3d_planner_contract.py  test_rrt3d_queue.py  test_rrt_goal_connection.py  test_rrt_star_3d_starttime.py  test_rrt_time_budget.py  test_rrtstar3d_planner_contract.py  test_runtime_representative_smoke.py  test_sampling3d_dynamic_rrt_contract.py  test_search2d_smoke.py  test_supported_modules_import.py  test_typing_contracts.py  test_utils_3d_path_default.py  test_utils_3d_sample_free.py
(+49 files in other folders)
