[build-system]
requires = ["setuptools>=69,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathplanning"
version = "0.1.0"
description = "Production-oriented search-based and sampling-based path planning algorithms with reusable Python API."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "PathPlanningV2 maintainers" }]
keywords = ["path-planning", "rrt", "astar", "motion-planning", "robotics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy>=1.23,<3.0",
  "matplotlib>=3.7,<4.0",
  "scipy>=1.9,<2.0",
  "pyrr>=0.10,<1.0",
  "pillow>=9.0,<11.0",
]

[project.optional-dependencies]
geometry = ["shapely>=2.0,<3.0"]
graphs = ["networkx>=3.0,<4.0"]

[project.urls]
Homepage = "https://github.com/damminhtien/PathPlanningV2"
Source = "https://github.com/damminhtien/PathPlanningV2"
Issues = "https://github.com/damminhtien/PathPlanningV2/issues"

[tool.setuptools.packages.find]
include = [
  "pathplanning*",
  "Search_based_Planning*",
  "Sampling_based_Planning*",
  "CurvesGenerator*",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# Start with correctness-focused checks for an existing legacy codebase.
# The rule set can be expanded over time as modules are cleaned up.
select = ["E9", "F63", "F7"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
