[build-system]
requires = ["setuptools>=69,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathplanning"
version = "0.1.2"
description = "Production-oriented search-based and sampling-based path planning algorithms with reusable Python API."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "damminhtien" }]
keywords = ["path-planning", "rrt", "astar", "motion-planning", "robotics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy>=1.23,<3.0",
]

[project.optional-dependencies]
pyrr = ["pyrr>=0.10,<1.0"]
scipy = ["scipy>=1.9,<2.0"]
viz = ["matplotlib>=3.7,<4.0"]
geometry = ["shapely>=2.0,<3.0"]
graphs = ["networkx>=3.0,<4.0"]

[project.urls]
Homepage = "https://github.com/damminhtien/pathplanning"
Source = "https://github.com/damminhtien/pathplanning"
Issues = "https://github.com/damminhtien/pathplanning/issues"

[tool.setuptools.packages.find]
include = [
  "pathplanning*",
  "Search_based_Planning",
  "Sampling_based_Planning",
  "CurvesGenerator",
]

[tool.setuptools.package-data]
pathplanning = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Keep a practical baseline for library code; expand as legacy modules are cleaned up.
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = [
  "pathplanning",
  "Search_based_Planning",
  "Sampling_based_Planning",
  "CurvesGenerator",
]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Keep legacy script-style modules runnable while preserving stricter checks elsewhere.
"pathplanning/search_based_planning/plan2d/*.py" = ["E402"]
"pathplanning/search_based_planning/search_3d/*.py" = ["E402"]
"pathplanning/sampling_based_planning/rrt_2d/*.py" = ["E402"]
"pathplanning/sampling_based_planning/rrt_3d/*.py" = ["E402"]
"Search_based_Planning/**/*.py" = ["E402"]
"Sampling_based_Planning/**/*.py" = ["E402"]
"CurvesGenerator/**/*.py" = ["E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
